--- a/templates/firepad_test.html
+++ b/templates/firepad_test.html
@@ -9,10 +9,9 @@
     <!-- CodeMirror and its JavaScript mode file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/mode/javascript/javascript.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/mode/python/python.min.js"></script>
     <script src="lib/matchbrackets.js"></script>
-    <script src="python.js"></script>
-    <link rel="stylesheet" href="lib/codemirror.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css"
