html 에 정의 되어 있던 init(), getExampleRef() 제거

--- a/templates/run_firepad.html
+++ b/templates/run_firepad.html
@@ -21,82 +21,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css"/>
     <link rel="stylesheet" href="https://firepad.io/releases/v1.5.9/firepad.css"/>
 
-<!-- 
-    <style>
-      html {
-        height: 100%;
-      }
-      body {
-        margin: 0;
-        height: 100%;
-        position: relative;
-      }
-      /* Height / width / positioning can be customized for your use case.
-       For demo purposes, we make firepad fill the entire browser. */
-      #firepad-container {
-        width: 100%;
-        height: 100%;
-      }
-    </style> -->
+    <!-- import js -->
+    <script src = "{% static 'run_firepad.js' %}"> </script>
   </head>
 
   <body onload="init()">
     <div id="firepad-container"></div>
     <div id='footer'>
-      <button >Code snippet save </button>
-      <div>
-
-    <script>
-      function init() {
-        //// Initialize Firebase.
-        //// TODO: replace with your Firebase project configuration.
-        var config = {
-          apiKey: "<API_KEY>",
-          authDomain: "firepad-gh-tests.firebaseapp.com",
-          databaseURL: "https://firepad-gh-tests.firebaseio.com",
-        };
-        firebase.initializeApp(config);
-
-        //// Get Firebase Database reference.
-        var firepadRef = getExampleRef();
-
-        //// Create CodeMirror (with line numbers and the JavaScript mode).
-        var codeMirror = CodeMirror(
-          document.getElementById("firepad-container"),
-          {
-            mode: { name: "python", version: 3, singleLineStringErrors: false },
-            lineNumbers: true,
-            indentUnit: 4,
-            matchBrackets: true,
-          }
-        );
-
-        //// Create Firepad.
-        firepad = Firepad.fromCodeMirror(firepadRef, codeMirror, {
-          defaultText:
-            '// JavaScript Editing with Firepad!\nfunction go() {\n  var message = "Hello, world.";\n  console.log(message);\n}',
-        });
-        
-      }
-
-      // Helper to get hash from end of URL or generate a random one.
-      function getExampleRef() {
-        var ref = firebase.database().ref();
-        var hash = window.location.hash.replace(/#/g, "");
-        if (hash) {
-          ref = ref.child(hash);
-        } else {
-          ref = ref.push(); // generate unique location.
-          window.location = window.location + "#" + ref.key; // add it as a hash to the URL.
-        }
-        if (typeof console !== "undefined") {
-          console.log("Firebase data: ", ref.toString());
-        }
-        return ref;
-      }
-    console.log(firepad.getText())
-    </script>
-
+      <button onclick="save_snippet()">Code snippet save </button>
+    </div>
   </body>
   
 </html>
