download function apply

--- a/templates/run_firepad.html
+++ b/templates/run_firepad.html
@@ -28,8 +28,9 @@
   <body onload="init()">
     <div id="firepad-container"></div>
     <div id='footer'>
-      <button onclick="save_snippet()">Code snippet save </button>
+      <button onclick="download('text.txt', firepad.getText())">Code snippet save </button>
     </div>
+    
   </body>
   
 </html>
