--- a/templates/run_firepad.html
+++ b/templates/run_firepad.html
@@ -28,7 +28,7 @@
   <body onload="init()">
     <div id="firepad-container"></div>
     <div id='footer'>
-      <button onclick="download('text.txt', firepad.getText())">Code snippet save </button>
+      <button onclick="download('tmp.py', firepad.getText())">Code snippet save </button>
     </div>
     
   </body>
